// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot 1`] = `
<span
  className="Tag flex-row undefined"
>
  test
</span>
`;

exports[`matches enzyme snapshots matches snapshot 2`] = `
<span
  className="Tag flex-row highlighted undefined"
>
  test
</span>
`;
